# Data_Infra

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
data/assets/: user_behavior.csv
data/p2p/agent-8025/received/: data1.csv
demo/: global_agent.py  p2p_agent.py  run_demo.py  run_demo_mock.py  seed_data.py  start_p2p.py
scripts/: generate_keys.py
src/dataspace/agent/: base_agent.py  provider_agent.py  requester_agent.py
src/dataspace/agent/prompts/: provider_system.py  requester_system.py
src/dataspace/agent/tools/: provider_tools.py  requester_tools.py  shared_tools.py
src/dataspace/api/: app.py
src/dataspace/api/routers/: assets.py  audit.py  contracts.py  negotiations.py  parties.py  transfer.py
src/dataspace/audit/: logger.py  models.py  verifier.py
src/dataspace/contract/: enforcer.py  registry.py  signer.py
src/dataspace/core/: crypto.py  enums.py  exceptions.py  models.py
src/dataspace/data/: exceptions.py  transfer_service.py
src/dataspace/data/adapters/: base.py  db_adapter.py  file_adapter.py  json_adapter.py  stream_adapter.py
src/dataspace/db/: database.py  tables.py
src/dataspace/db/repositories/: asset_repo.py  audit_repo.py  contract_repo.py  negotiation_repo.py  party_repo.py
src/dataspace/negotiation/: contract_builder.py  protocol.py  session.py
tests/: test_p2p_agent.py
