[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataspace"
version = "0.1.0"
description = "可信可控可管数据交换平台 — Trusted Data Exchange System"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "anthropic>=0.28",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "cryptography>=42.0",
    "aiofiles>=23.2",
    "pandas>=2.2",
    "pyarrow>=16.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "rich>=13.7",
    "typer>=0.12",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
