[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataspace-p2p"
version = "0.1.0"
description = "DataSpace P2P 数据共享节点"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
]

[tool.setuptools.packages.find]
include = ["demo*"]
